--- a/css/Header&Footer.css
+++ b/css/Header&Footer.css
@@ -1,3 +1,10 @@
+/* Estilos generales */
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 .navbar {
   background-color: #333;
   overflow: hidden;
@@ -78,6 +85,8 @@
     display: block;
     cursor: pointer;
     float: right;
+    padding-top: 10px;
+    padding-right: 20px;
   }
 
   .menu-toggle.active .bar:nth-child(1) {
@@ -92,3 +101,54 @@
     transform: rotate(45deg) translate(-5px, -6px);
   }
 }
+/* Estilos para el pie de página */
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 40px 0;
+  text-align: center;
+  font-family: Arial, sans-serif;
+}
+
+.social-links a {
+  color: #fff;
+  text-decoration: none;
+  margin-right: 20px;
+  transition: color 0.3s ease;
+}
+
+.social-links a:hover {
+  color: #007bff;
+}
+
+.footer-links a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 10px;
+  transition: color 0.3s ease;
+}
+
+.footer-links a:hover {
+  color: #007bff;
+}
+
+.footer-info {
+  margin-top: 20px;
+}
+
+.footer-info p {
+  margin: 0;
+  font-size: 16px;
+}
+
+.footer-info p a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer-info p a:hover {
+  color: #007bff;
+}
+
+
